# wiki

./: .env.example  .gitignore  PLAN_TECHNIQUE.md  README.md  RELEASE.md  docker-compose.dokploy.yml  docker-compose.yml  wiki_concept.html
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/accounts/: admin.py  crypto.py  managers.py  mfa.py  models.py  serializers.py  sso.py  sso_views.py  storage.py  tests.py  urls.py  views.py
backend/accounts/management/commands/: seed_demo.py
backend/accounts/migrations/: 0001_initial.py  0002_user_is_system_admin.py  0003_backfill_is_system_admin.py  0004_remove_historicaluser_avatar_url_and_more.py
backend/config/: asgi.py  settings.py  settings_test.py  urls.py
backend/core/: models.py
backend/notifications/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_alter_notification_type.py
backend/pages/: admin.py  models.py  search.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/pages/migrations/: 0001_initial.py  0002_remove_page_unique_page_slug_per_workspace_and_more.py  0003_attachment.py  0004_comment.py
backend/realtime/: admin.py  consumers.py  locks.py  middleware.py  models.py  presence.py  routing.py  tests.py
backend/realtime/migrations/: 0001_initial.py
backend/siteconfig/: admin.py  apps.py  email.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/siteconfig/migrations/: 0001_initial.py  0002_email_smtp_fields.py
backend/workflows/: admin.py  models.py  serializers.py  urls.py  views.py
backend/workflows/migrations/: 0001_initial.py
backend/workspaces/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/workspaces/migrations/: 0001_initial.py  0002_historicalworkspaceinvitation_workspaceinvitation_and_more.py  0003_backfill_owner_membership.py
docs/: 01-demarrage.md  02-compte-et-securite.md  03-espaces-de-travail.md  04-rediger-des-pages.md  05-collaboration-temps-reel.md  06-historique-et-versions.md  07-recherche.md  08-workflows.md  09-notifications.md  10-hors-ligne-et-synchro.md  11-export.md  12-application-bureau.md  13-administration.md  14-faq-et-depannage.md  15-raccourcis-clavier.md  README.md
docs/roadmap/: README.md  ROADMAP.md  f06-coedition-temps-reel.md  f09-etiquettes-et-favoris.md  f10-modeles-de-page.md  f12-recherche-globale.md  f13-partage-public.md  f14-api-et-webhooks.md  f15-tableaux-avances.md  finitions.md
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: Avatar.tsx  BrandLogo.tsx  CommentsPanel.tsx  ConflictsModal.tsx  Icon.tsx  MenuBridge.tsx  MissingPageDialog.tsx  NotificationBell.tsx  OfflineBanner.tsx  PageActions.tsx  PresenceBar.tsx  SearchPalette.tsx  Sidebar.tsx  SsoDeepLink.tsx  SsoProviderIcon.tsx  SyncButton.tsx  ThemeToggle.tsx  ToastContainer.tsx  TopBar.tsx
frontend/src/components/editor/: MarkdownEditor.tsx  MentionPicker.tsx  PagePicker.tsx  SectionBlock.tsx  TableEditor.tsx  TableOfContents.tsx
frontend/src/components/history/: DiffView.tsx  HistoryModal.tsx
frontend/src/config/: SiteConfigContext.tsx
frontend/src/hooks/: useConflictCount.ts  useForcedOffline.ts  useMermaid.ts  useNetworkStatus.ts  useOutboxCount.ts  usePageSocket.ts  useSync.ts  useTheme.ts
frontend/src/lib/: api.ts  auth.ts  avatar.ts  db.ts  editorActions.ts  markdown.ts  native.ts  network.ts  pageStore.ts  pageTree.ts  platform.ts  queryClient.ts  sections.ts  slug.ts  sync.ts  tables.ts  types.ts  updater.ts  wikilinks.ts  ws.ts
frontend/src/lib/export/: docx.ts  pdf.ts  (+1 more)
frontend/src/routes/: AdminRoute.tsx  HelpRoute.tsx  InviteRoute.tsx  LoginRoute.tsx  PageRoute.tsx  SettingsRoute.tsx  WelcomeRoute.tsx  WorkspaceHome.tsx  WorkspaceLayout.tsx  workspaceContext.ts
(+8 files in other folders)
