[project]
name = "wikicollab-backend"
version = "0.1.0"
description = "WikiCollab — collaborative real-time wiki (backend)"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "channels>=4.1",
    "channels-redis>=4.2",
    "daphne>=4.1",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "django-allauth>=65.0",
    "django-simple-history>=3.8",
    "django-cors-headers>=4.4",
    "whitenoise>=6.7",
    "drf-spectacular>=0.27",
    "cryptography>=43.0",
    "requests>=2.31",  # allauth OAuth providers
    "pyotp>=2.9",
    "qrcode[pil]>=8.0",
    "python-dotenv>=1.0",
    "django-storages[s3]>=1.14",  # S3 (Contabo) storage for profile photos
    "Pillow>=10.0",  # ImageField validation for avatars
]

[project.optional-dependencies]
# SAML needs native xmlsec libs; installed in the Docker image (Linux),
# optional on developer machines. Settings auto-detect its presence.
saml = [
    "django-allauth[saml]>=65.0",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Django project, not a distributable package: pyproject is the dependency
# manifest only (pip install -e . pulls deps without packaging the apps).
packages = []

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.pytest.ini_options]
# Local default: no external services. CI overrides with --ds=config.settings
# (+ Postgres/Redis service containers) to exercise the real stack.
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["test_*.py", "tests.py"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing"
