[package]
name = "wikicollab"
version = "0.8.1"
description = "WikiCollab — collaborative real-time wiki (desktop)"
authors = ["EZ Audiovisuel"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wikicollab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
# Local-first desktop plumbing
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
# SSO hand-off: browser finishes the OAuth flow, then a wikicollab:// deep link
# returns the one-time code to the app.
tauri-plugin-deep-link = "2"

# Desktop-only: auto-update from GitHub Releases + relaunch after install.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Deliver the deep link to the already-running instance instead of spawning a
# new one (required on Windows/Linux for custom-scheme links).
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
